--- a/resources/sample_pages/404.html
+++ b/resources/sample_pages/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found</title>
-    <link rel="stylesheet" href="./404style.css">
+    <link rel="stylesheet" href="404style.css">
 </head>
 <body>
     <div class="container">
