--- a/resources/sample_pages/index.html
+++ b/resources/sample_pages/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="indexstyle.css">
     <title>Sample Page</title>
 </head>
 <body>
-    <h1>Welcome to My Test Page</h1>
-    <p>This is a paragraph for testing purposes.</p>
-    <a href="https://example.com">Visit Example</a>
+    <header>
+        <h1>Welcome to My Test Page</h1>
+    </header>
+    <main>
+        <section class="intro">
+            <p>This is a paragraph for testing purposes. Explore the layout and design provided by the CSS styling.</p>
+        </section>
+        <section class="link-section">
+            <a href="https://example.com" class="example-link">Visit Example</a>
+        </section>
+    </main>
+    <footer>
+        <p>© 2024 My Test Page. All rights reserved.</p>
+    </footer>
 </body>
 </html>
+
