--- a/.resources/html/cgi_test.html
+++ b/.resources/html/cgi_test.html
@@ -91,11 +91,11 @@
 </head>
 <body>
     <div class="background"></div>
-    <h1 class="title">CGI Test Page</h1>
     <div class="container">
         <div class="card">
+			<h1 class="title">CGI Test Page</h1>
             <p>This is the page for testing CGI scripts.</p>
-            <form action="/cgi-bin/test.cgi" method="POST">
+            <form action="/cgi-bin/cgi_test.py" method="POST">
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="submit" value="Submit">
             </form>
