--- a/.resources/html/get_request_test.html
+++ b/.resources/html/get_request_test.html
@@ -91,11 +91,12 @@
 </head>
 <body>
     <div class="background"></div>
-    <h1 class="title">GET Request Test Page</h1>
+    
     <div class="container">
         <div class="card">
+			<h1 class="title">GET Request Test Page</h1>
             <p>This is the page for testing GET requests.</p>
-            <form action="/cgi-bin/get_test.cgi" method="GET">
+            <form action="/cgi-bin/get_test.py" method="GET">
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="submit" value="Submit">
             </form>
