feat(ConfigParser): improved error page handling
- added more functions in CachedPages

--- a/.resources/sample_pages/index.html
+++ b/.resources/sample_pages/index.html
@@ -32,6 +32,13 @@
         <input type="submit" value="Submit">
     </form>
 
+    <form action="/upload" method="post" enctype="multipart/form-data">
+        <label for="file">Choose a file:</label>
+        <input type="file" id="file" name="file">
+        <br><br>
+        <button type="submit">Upload</button>
+    </form>
+
     <footer>
         <p>© 2024 My Test Page. All rights reserved.</p>
     </footer>
