--- a/.resources/html/index.html
+++ b/.resources/html/index.html
@@ -144,21 +144,21 @@
         <div class="bcont">
             <div class="border">
                 <div class="card">
-                    <a href="html/get_request_test.html">GET Request Test</a>
+                    <a href="get_request_test.html">GET Request Test</a>
                 </div>
                 <div class="card">
-                    <a href="html/post_request_test.html">POST Request Test</a>
+                    <a href="post_request_test.html">POST Request Test</a>
                 </div>
                 <div class="card">
-                    <a href="html/delete_request_test.html">DELETE Request Test</a>
+                    <a href="delete_request_test.html">DELETE Request Test</a>
                 </div>
             </div>
             <div class="border">
                 <div class="card">
-                    <a href="html/cgi_test.html">CGI Test</a>
+                    <a href="cgi_test.html">CGI Test</a>
                 </div>
                 <div class="card">
-                    <a href="html/file_upload_test.html">File Upload Test</a>
+                    <a href="file_upload_test.html">File Upload Test</a>
                 </div>
             </div>
         </div>
